Fixed Sidebar text alignement, fixed icon style

--- a/client/courseprojectg09/src/components/Sidebar/Sidebar.css
+++ b/client/courseprojectg09/src/components/Sidebar/Sidebar.css
@@ -53,7 +53,7 @@
 
 .collapse-arrow {
     margin-right: 22px;
-    margin-bottom: 1px;
+    margin-bottom: 0;
 }
 
 .collapse-arrow:hover {
